--- a/mmapp/package.json
+++ b/mmapp/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "merge": "^1.2.1",
     "npm": "^6.8.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-scripts": "1.1.5",
-    "three": "^0.102.0"
+    "three": "^0.102.0",
+    "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
